web: fix dark mode for BYO domain
- set BG color for host -> CNAME
- change buttons
- fix some problems with config.bash for hosting-platform serger-mode
- close #146

--- a/server/web/static/css/style.css
+++ b/server/web/static/css/style.css
@@ -20,6 +20,7 @@
     --color-green-400: oklch(79.2% 0.209 151.711);
     --color-green-500: oklch(72.3% 0.219 149.579);
     --color-green-600: oklch(62.7% 0.194 149.214);
+    --color-green-700: oklch(52.7% 0.154 150.069);
     --color-green-900: oklch(39.3% 0.095 152.535);
     --color-teal-400: oklch(77.7% 0.152 181.912);
     --color-teal-500: oklch(70.4% 0.14 182.503);
@@ -756,6 +757,11 @@
   .dark\:bg-gray-900 {
     &:is(.dark *) {
       background-color: var(--color-gray-900);
+    }
+  }
+  .dark\:bg-green-700 {
+    &:is(.dark *) {
+      background-color: var(--color-green-700);
     }
   }
   .dark\:bg-green-900\/30 {
